Landmine refactor, new plugs
-Greatly refactored the UpgradeableMine class merging the map hiding and activation logic from thermal mines
-Added a new upgrade which allows mines to target friendlies and ignore disabling
-Added a WIp item and liquid plug.  Along with their corosponding sockets. They don't do anything for now.
-Redid the socket glow colours.
-Added the lightning mine! It's currently wip. Shoots out bouncing arcs of lightning which fall off in damage for each target hit and distance traveled.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -68,11 +68,11 @@ block.hollow-frostscape-power-plug-large.description = Transfers a variable amou
 block.hollow-frostscape-power-plug-large.details = Ate too many wires and became a zenner diode.
 
 item.hollow-frostscape-rust.name = Rust
-item.hollow-frostscape-rust.description = Pieces of scrap metal commonly extracted from wreckage and decayed structures.\nFar too gone to be refined, but still usable in machines...
+item.hollow-frostscape-rust.description = Pieces of iron scrap metal commonly extracted from wreckage and decayed structures.\nFar too gone to be refined, but still usable in machines...
 item.hollow-frostscape-rust.details = This piece of chocolate is surprisingly bitter. Has a very pixely origin.
 
 item.hollow-frostscape-stone.name = Stone
-item.hollow-frostscape-stone.description = Bricks of rubble commonly harvested from wreckage ruined barriers\nFar too gone to be refined, but still usable for infrastructure...
+item.hollow-frostscape-stone.description = Bricks of stone rubble commonly harvested from wreckage ruined barriers\nFar too gone to be refined, but still usable for infrastructure...
 item.hollow-frostscape-stone.details = I swear if I have to explain that this isn't actually pure "rock" something is gona blow.\nNo, this is not taconite -.-
 
 item.hollow-frostscape-magnetite-shards.name = Magnetite
