--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,18 @@ task jarAndroid{
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
 
         //dex and desugar files - this requires d8 in your PATH
-        "d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
-            .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
+        if (System.getenv("OS") == "Windows_NT") {
+            def buildToolsRoot = new File("$sdkRoot/build-tools/").listFiles().sort().reverse().find {
+                f -> new File(f, "d8.bat").exists()
+            }
+            if (!buildToolsRoot)
+                throw new GradleException("No d8.bat found. Ensure that you have an Android build tools installed.")
+            "${buildToolsRoot}/d8.bat $dependencies ${project.tasks.jar.archiveFile.get()} --min-api 14 --output $dexFile.absolutePath"
+                    .execute(null, projectDir).waitForProcessOutput(System.out, System.err)
+        } else {
+            "d8 $dependencies ${project.tasks.jar.archiveFile.get()} --min-api 14 --output $dexFile.absolutePath"
+                    .execute(null, projectDir).waitForProcessOutput(System.out, System.err)
+        }
     }
 }
 
