Swarm/Gelid family impl, new turret

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -59,6 +59,10 @@ block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
 block.hollow-frostscape-pyroclast.details = The horns aren't just for show.
 
+block.hollow-frostscape-cryonis.name = Cryonis
+block.hollow-frostscape-cryonis.description = Launches a huge fragmenting ice crystal with high damage.
+block.hollow-frostscape-cryonis.details = no Bob, launching giant chunks of ice at balloons won't freeze them like that, you've gotta do it like this-
+
 block.hollow-frostscape-power-plug.name = Power Plug
 block.hollow-frostscape-power-plug.description = Transfers a variable amount of power in and out of the sector's power bank.
 block.hollow-frostscape-power-plug.details = More of a two-way rate-limited diode really
@@ -68,7 +72,7 @@ block.hollow-frostscape-power-plug-large.description = Transfers a variable amou
 block.hollow-frostscape-power-plug-large.details = Ate too many wires and became a zenner diode.
 
 item.hollow-frostscape-rust.name = Rust
-item.hollow-frostscape-rust.description = Pieces of iron scrap metal commonly extracted from wreckage and decayed structures.\nFar too gone to be refined, but still usable in machines...
+item.hollow-frostscape-rust.description = Pieces of iron scrap metal commonly extracted from wreckage and decayed structures.\nUsable in machines...
 item.hollow-frostscape-rust.details = This piece of chocolate is surprisingly bitter. Has a very pixely origin.
 
 item.hollow-frostscape-stone.name = Stone
@@ -166,17 +170,30 @@ dialog.database-entries.info1 = [sky]B L I N D I N G  L I G H T
 dialog.database-entries.info2 = [red]F O R E V E R  T R A P P E D  I N  T H I S  D A M M  D I A L O G . . .
 dialog.database-entries.info3 = [#f5bf79]A C H I E V E  E N L I G H T E N M E N T.
 
-family.hollow-frostscape-hunter.name = Hunter
-family.hollow-frostscape-hunter.description = A family of units designed to hunt down targets, and harass larger threats.
-family.hollow-frostscape-hunter.details = [#dde6f0]Hunters[] are often built with at least one of three traits in mind.\n\nSpeed, range or stealth.\n\nThis makes them [accent]ideal[] for "hunting" or harassing targets.\n\nSpecialized hunters can serve a secondary use, although less pronounced. Speedier hunters can be used to scout ahead, or to patrol territory. Particularly stealthy hunters can be used as ambush units, although not built for facing full armies or assaulting buildings behind the front lines. Overall though they are quite [accent]versatile[].\n\nDespite their abilities, they are generally [red]worse[] at dealing with [accent]organized defenses[] than [accent]small outposts or assault squads[].\n\nMost hunters are best used alone, and do not lend much support to army compositions, however certain hunters may provide boosts to allied units in an area around themselves, making them a slight bit more useful when in a group.
-
-family.hollow-frostscape-assault.name = Assult
-family.hollow-frostscape-assault.description = A family of units designed to deal damage to targets, occasionally in swarms.
+family.hollow-frostscape-assault.name = Assault
+family.hollow-frostscape-assault.description = A family of units designed to deal damage to targets, and siege fortifications.
 family.hollow-frostscape-assault.details = [#ffa465]Assaults[] are usually your generic fighter unit which shouldn't be too difficult to handle in isolation. They will often come with supporting unit family types.\n\nSpecialized assault units may be much tankier than other units, have more armor or more dps. They are overall your go-to choice when unsure about which tactic will work best against an unknown, fortified outpost.
+
+family.hollow-frostscape-support.name = Support
+family.hollow-frostscape-support.description = A family of units designed around supporting fortifications and attack parties.
+family.hollow-frostscape-support.details = [#83f490]Supports[] are often best used with other units. Some bolster fortifications with their healing weapons, whilst others are best used on the battlefield to support sieges with bullet denial and unit support.\n\nSome unique [#83f490]Supports[] have crowd control capability, and are often mixed with other families.
 
 family.hollow-frostscape-specialist.name = Specialist
 family.hollow-frostscape-specialist.description = A family of units designed to fill niches whether it be suicide bombing or enemy suppression.
 family.hollow-frostscape-specialist.details = [#c49ff4]Specialists[] are a broad category of units, spanning from spider-like mechs that use sappers to suicide bombers and regeneration suppressors. [red]Just knowing an enemy has obtained specialist family units won't be enough to determine how to deal with them.[]\n\nMost breeds of specialsts will use [accent]status-effect[] afflicting weapons, whilst others are specialists simply because of flight. What does and doesn't belong in the specialist family is a puzzling question, due to their [accent]"niche"[] nature. \n\nThey are a wildcard of a family, and should be used to the best of their [accent]strengths[].
+
+family.hollow-frostscape-hunter.name = Hunter
+family.hollow-frostscape-hunter.description = A family of units designed to hunt down targets, and harass larger threats.
+family.hollow-frostscape-hunter.details = [#dde6f0]Hunters[] are designed for "hunting" or harassing targets.\n\nSpeedier [#dde6f0]Hunters[] make great scouts, though they can't pierce behind front lines without help.\n\nSpecialized [#dde6f0]Hunters[] are found utilizing cloaking mechanics, and can penetrate deep into enemy bases to snipe key targets. Ensure you check heat signatures or build sources of specialized radars to protect against such attacks.
+
+family.hollow-frostscape-swarm.name = Swarm [red](WIP)[]
+family.hollow-frostscape-swarm.description = A family of units designed around controlled destruction, and overwhelming numbers.
+family.hollow-frostscape-swarm.details = [#f0725c]Swarmers[] are best used to overwhelm with their unique on-death and health threshold effects. Their construction process often involves nearly or fully killing another [#f0725c]Swarmer[].\n\nWhilst [#ffa465]Assault[] units are great against outposts and [#dde6f0]Hunters[] are best against lone targets, [#f0725c]Swarmers[] are best used against groups with no crowd control, regardless of type.\n\n[red]Beware splash damage[].
+
+family.hollow-frostscape-gelid.name = Gelid [red](WIP)[]
+family.hollow-frostscape-gelid.description = A family of units designed around temperature resistance, and self-preservation.
+family.hollow-frostscape-gelid.details = [#f4e888]Gelids[] are distinct from other families with their sheer self-preservation abilities.\n\nThey make great scouts in extreme climates, and can tank great amounts of damage before going down. Most also have regenerating hulls\n\nSpecialized [#f4e888]Gelids[] should be used alongside [#83f490]Supports[] when building forts in hostile environments.
+
 
 #wip
 controller.default.name = Default Controller
