--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -125,8 +125,17 @@ upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Land
 upgrade.hollow-frostscape-always-armed-landmine.name = Always Armed(Landmines)
 
 block.hollow-frostscape-mafic-floor.name = Mafic Floor
+block.hollow-frostscape-dense-mafic-floor.name = Dense Mafic Floor
 block.hollow-frostscape-mafic-stone.name = Mafic Stone
 block.hollow-frostscape-mafic-boulder.name = Mafic Boulder
+
+block.hollow-frostscape-obsidian-floor.name = Obsidian Floor
+block.hollow-frostscape-rough-obsidian-floor.name = Rough Obsidian Floor
+block.hollow-frostscape-cracked-obsidian-floor.name = Cracked Obsidian Floor
+block.hollow-frostscape-obsidian.name = Obsidian
+block.hollow-frostscape-obsidian-spikes.name = Obsidian Spikes
+
+block.hollow-frostscape-red-crystal-prop.name = Red Crystal Tree
 
 settings.frostscape-title = Frostscape
 settings.frostscape-parallax = Parallax
