Cryonis: expirimental missile frag inside missiles
GETTING PART PROGRESS TO WORK WITH RELOAD WARMUP AND CHARGE ALL AT ONCE IS AN A R T

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 unit.hollow-frostscape-cord.name = Cord
 unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds at enemy targets, applying a stacking slowing effect. Releases an angled blast of fragments on destruction.
-unit.hollow-frostscape-cord.details = Stuck in a bind
+unit.hollow-frostscape-cord.details = A simple patrol unit often found supporting its buddies. Whenever facing one, targets often find themselves stuck in a bind.
 
 unit.hollow-frostscape-sunspot.name = Sunspot
 unit.hollow-frostscape-sunspot.description = Charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
@@ -61,7 +61,7 @@ block.hollow-frostscape-pyroclast.details = The horns aren't just for show.
 
 block.hollow-frostscape-cryonis.name = Cryonis
 block.hollow-frostscape-cryonis.description = Launches a huge fragmenting ice crystal with high damage.
-block.hollow-frostscape-cryonis.details = no Bob, launching giant chunks of ice at balloons won't freeze them like that, you've gotta do it like this-
+block.hollow-frostscape-cryonis.details = Using tech you wish you had for instant ice
 
 block.hollow-frostscape-power-plug.name = Power Plug
 block.hollow-frostscape-power-plug.description = Transfers a variable amount of power in and out of the sector's power bank.
