--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -57,26 +57,34 @@ block.hollow-frostscape-stone-wall.dedtails = Shoddy construction, but it works.
 
 block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
-block.hollow-frostscape-pyroclast.details = The horns aren't just for show.
+block.hollow-frostscape-pyroclast.details = Old designed called for something attached to the back.
 
 block.hollow-frostscape-cryonis.name = Cryonis
 block.hollow-frostscape-cryonis.description = Launches a huge fragmenting ice crystal with high damage.
 block.hollow-frostscape-cryonis.details = Using tech you wish you had for instant ice
 
 block.hollow-frostscape-power-plug.name = Power Plug
-block.hollow-frostscape-power-plug.description = Transfers a variable amount of power in and out of the sector's power bank.
+block.hollow-frostscape-power-plug.description = Exchanges a variable amount of power with a sector's power bank.
 block.hollow-frostscape-power-plug.details = More of a two-way rate-limited diode really
 
 block.hollow-frostscape-power-plug-large.name = Large Power Plug
-block.hollow-frostscape-power-plug-large.description = Transfers a variable amount of power in and out of the sector's power bank. Greater buffer size and efficiency than a regular plug.
+block.hollow-frostscape-power-plug-large.description = Exchanges a variable amount of power with a sector's power bank. Greater buffer size and speed than a regular plug.
 block.hollow-frostscape-power-plug-large.details = Ate too many wires and became a zenner diode.
 
+block.hollow-frostscape-item-plug.name = Item Plug
+block.hollow-frostscape-item-plug.description = Stockpiles half its inventory with some margin. Interfaces with a sector's item bank.
+block.hollow-frostscape-item-plug.details = More of a two-way rate-limited diode really
+
+block.hollow-frostscape-item-plug-large.name = Large Item Plug
+block.hollow-frostscape-item-plug-large.description = Stockpiles half its inventory with some margin. Interfaces with a sector's item bank. Greater buffer size and speed than a regular plug, but longer startup speed.
+block.hollow-frostscape-item-plug-large.details = Ate too many wires and became a zenner diode.
+
 item.hollow-frostscape-rust.name = Rust
-item.hollow-frostscape-rust.description = Pieces of iron scrap metal commonly extracted from wreckage and decayed structures.\nUsable in machines...
+item.hollow-frostscape-rust.description = Pieces of iron scrap metal commonly extracted from wreckage and decayed structures, or occasionally from the ground.\nThe parts and rebar in most low-tech buildings.
 item.hollow-frostscape-rust.details = This piece of chocolate is surprisingly bitter. Has a very pixely origin.
 
 item.hollow-frostscape-stone.name = Stone
-item.hollow-frostscape-stone.description = Bricks of stone rubble commonly harvested from wreckage ruined barriers\nFar too gone to be refined, but still usable for infrastructure...
+item.hollow-frostscape-stone.description = Bricks of stone rubble commonly harvested from wreckage and ruined barriers, or extracted from the ground.\nThe foundation and concrete in most low-tech buildings.
 item.hollow-frostscape-stone.details = I swear if I have to explain that this isn't actually pure "rock" something is gona blow.\nNo, this is not taconite -.-
 
 item.hollow-frostscape-magnetite-shards.name = Magnetite
@@ -88,11 +96,11 @@ item.hollow-frostscape-bauxite.description = Used as a building material and ref
 item.hollow-frostscape-bauxite.details = The rose chocolate ice cream comes with a cup!\n[darkgray]Shoulda gotten three scoops *grumble*[]
 
 item.hollow-frostscape-sulphur.name = Sulphur
-item.hollow-frostscape-sulphur.description = Used in ore refinement, along with powerful projectile and explosive weaponry
+item.hollow-frostscape-sulphur.description = Used in ore refinement, along with powerful projectile and explosive weaponry. Possible nutrient for biological lifeforms.
 item.hollow-frostscape-sulphur.details = Cheese.\nBottom text
 
 item.hollow-frostscape-ferric-panels.name = Ferric Panels
-item.hollow-frostscape-ferric-panels.description = Used in armor plating and light tech.
+item.hollow-frostscape-ferric-panels.description = Used in armor plating and light tech. 
 item.hollow-frostscape-ferric-panels.details = Iron but flat
 
 item.hollow-frostscape-aluminium.name = Aluminium
@@ -103,13 +111,21 @@ item.hollow-frostscape-thermite.name = Thermite
 item.hollow-frostscape-thermite.description = Used extensively in welding and weaponry. Useful as a powerful (but dangerous!) source of fuel.
 item.hollow-frostscape-thermite.details = Al + Fe = SPONTANIUM COMBUSTUM-
 
-item.hollow-frostscape-ice.name = Ice
-item.hollow-frostscape-ice.description = Frozen water usually gotten as a waste product. Useful as portable water storage/coolent.
-item.hollow-frostscape-ice.details = The obligatory generic item for cold planet mods with dihydride monoxide. Accelerates corrosion and suffocates larger lifeforms with advanced respiratory systems.\n*Water but i c e
-
 item.hollow-frostscape-hailite.name = Hailite
 item.hollow-frostscape-hailite.description = Common rock salt key to obtaining Sodium and Chlorine, and usable in electrolysis.
 item.hollow-frostscape-hailite.details = NaCHOS
+
+item.hollow-frostscape-ice.name = Ice
+item.hollow-frostscape-ice.description = Frozen water usually obtained as a waste product. Useful as portable water storage/coolent.
+item.hollow-frostscape-ice.details = The obligatory generic item for cold planet mods with dihydride monoxide. Accelerates corrosion and suffocates larger lifeforms with advanced respiratory systems.\n*Water but i c e
+
+item.hollow-frostscape-algae-muffin.name = Algae Muffin
+item.hollow-frostscape-algae-muffin.description = Used primarily in gel production, and biological synthesis. Can be revived with water.
+item.hollow-frostscape-algae-muffin.details = Very compact, and naturally occurring. Seems to thrive despite the hellish climate.\n\nNote: eats Sulphur formations. Keep it away from containers of it, or do so in controlled environments.
+
+item.hollow-frostscape-gel.name = Gel
+item.hollow-frostscape-gel.description = Viscus ball of binding agents. Very versatile.
+item.hollow-frostscape-gel.details = SLIMEBALL
 
 status.hollow-frostscape-napalm.name = Napalm
 status.hollow-frostscape-napalm.description = Turns burning into instant damage.
@@ -148,14 +164,16 @@ bar.pumpabletiles = Pumpable tiles found!
 bar.crackedfloors = Cracked floors found!
 bar.nocrackedfloors = No valid floors.
 bar.bank.poweramount = Bank Power: {0}
+
 bar.bank.importing = Importing: {0}/s
 bar.bank.exporting = Exporting: {0}/s
 bar.bank.stable = Stable: No flow
 bar.bank.full = Bank full!
 bar.bank.empty = Bank empty!
+
 bar.bank.disabled = Power Bank Disabled
 bar.socketsfound = {0} Socket covered
-bar.nosockets = No plugs of same type!
+bar.nosockets = No sockets of same type!
 bar.plugefficiency = {0}% coverage
 
 category.family = Family
