New 2x2 liquid turret * base
cat

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -63,6 +63,10 @@ block.hollow-frostscape-cryonis.name = Cryonis
 block.hollow-frostscape-cryonis.description = Launches a huge fragmenting ice crystal with high damage.
 block.hollow-frostscape-cryonis.details = Using tech you wish you had for instant ice
 
+block.hollow-frostscape-rivulet.name = Rivulet
+block.hollow-frostscape-rivulet.description = Spurts out a concentrated stream of water, which bounces between hit targets.
+block.hollow-frostscape-rivulet.details = Wet cat from rainy world. One of the first of its kind.
+
 block.hollow-frostscape-power-plug.name = Power Plug
 block.hollow-frostscape-power-plug.description = Exchanges a variable amount of power with a sector's power bank.
 block.hollow-frostscape-power-plug.details = More of a two-way rate-limited diode really
