Various tweaks to items
-Added sodium, boron and enzymes.
-Redid some descriptions
-Made Rivulet's particles less laggy.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -97,7 +97,7 @@ item.hollow-frostscape-magnetite-shards.details = The rose chocolate ice cream c
 
 item.hollow-frostscape-bauxite.name = Bauxite
 item.hollow-frostscape-bauxite.description = Used as a building material and refined for both Aluminium and Gallium.
-item.hollow-frostscape-bauxite.details = The rose chocolate ice cream comes with a cup!\n[darkgray]Shoulda gotten three scoops *grumble*[]
+item.hollow-frostscape-bauxite.details = Orange zest, mmmmmmmmm.
 
 item.hollow-frostscape-sulphur.name = Sulphur
 item.hollow-frostscape-sulphur.description = Used in ore refinement, along with powerful projectile and explosive weaponry. Possible nutrient for biological lifeforms.
@@ -109,11 +109,23 @@ item.hollow-frostscape-ferric-panels.details = Iron but flat
 
 item.hollow-frostscape-aluminium.name = Aluminium
 item.hollow-frostscape-aluminium.description = Used in unit hulls, portable liquid storage and corrosion protection. Very light.
-item.hollow-frostscape-aluminium.details = Be honest it looks like generic metal no#infinity without context.
+item.hollow-frostscape-aluminium.details = Be honest, it looks like generic metal no#infinity without context.
+
+item.hollow-frostscape-sodium.name = Sodium
+item.hollow-frostscape-sodium.description = Used as a potent reduction agent, and oxidises quickly. Consumed as NaOH in electrolytic cells when refining other metals.\n\n[red]Generates immense heat when in contact with water-based substances, and can be triggered to explode.[]
+item.hollow-frostscape-sodium.details = Y'know I was going to do the NaCHOS joke again, but I've really gota ask, who thought using refined sodium was a good idea.
+
+item.hollow-frostscape-boron.name = Boron
+item.hollow-frostscape-boron.description = Used in production of durable platings, and basic semiconductors.
+item.hollow-frostscape-boron.details = Helpful as a glass flux, and algae seems to be able to eat it.
 
 item.hollow-frostscape-thermite.name = Thermite
-item.hollow-frostscape-thermite.description = Used extensively in welding and weaponry. Useful as a powerful (but dangerous!) source of fuel.
+item.hollow-frostscape-thermite.description = Used extensively in welding and weaponry. Useful as a powerful (but dangerous!) source of fuel.\n\n[red]Thermite fires are hard to start, but don't go out easily.[]
 item.hollow-frostscape-thermite.details = Al + Fe = SPONTANIUM COMBUSTUM-
+
+item.hollow-frostscape-enzymes.name = Enzymes
+item.hollow-frostscape-enzymes.description = Used in synthesising Gel, and more advanced bio-synthesis.
+item.hollow-frostscape-enzymes.details = Various concentrated extracts collected from algal growths, seemingly safe for consumption, and high in nutrition.\n\nThe high concentration of specific organic chemical agents hints towards selective traits, though it seems like nobody's left to benefit from them.
 
 item.hollow-frostscape-hailite.name = Hailite
 item.hollow-frostscape-hailite.description = Common rock salt key to obtaining Sodium and Chlorine, and usable in electrolysis.
