added delay to plugs, more item plug functionality

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -181,6 +181,8 @@ bar.crackedfloors = Cracked floors found!
 bar.nocrackedfloors = No valid floors.
 bar.bank.poweramount = Bank Power: {0}
 
+bar.bank.starting.import = Starting imports
+bar.bank.starting.export = Starting exports
 bar.bank.importing = Importing: {0}/s
 bar.bank.exporting = Exporting: {0}/s
 bar.bank.stable = Stable: No flow
