4x4 electric chain turret, Plume
Trying to work on larger turrets/asymetric turrets, so here's another one. :D

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -59,6 +59,10 @@ block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
 block.hollow-frostscape-pyroclast.details = Old designed called for something attached to the back.
 
+block.hollow-frostscape-plume.name = Plume
+block.hollow-frostscape-plume.description = Fries targets with bouncing arcs of electricity.
+block.hollow-frostscape-plume.details = Looks like a snake head when firing. Could just be me.
+
 block.hollow-frostscape-cryonis.name = Cryonis
 block.hollow-frostscape-cryonis.description = Launches a huge fragmenting ice crystal with high damage.
 block.hollow-frostscape-cryonis.details = Using tech you wish you had for instant ice
