New env blocks, wip families table
man I swear I can't keep doing this

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -103,9 +103,9 @@ item.hollow-frostscape-bauxite.name = Bauxite
 item.hollow-frostscape-bauxite.description = Used as a building material and refined for both Aluminium and Gallium.
 item.hollow-frostscape-bauxite.details = Orange zest, mmmmmmmmm.
 
-item.hollow-frostscape-sulphur.name = Sulphur
-item.hollow-frostscape-sulphur.description = Used in ore refinement, along with powerful projectile and explosive weaponry. Possible nutrient for biological lifeforms.
-item.hollow-frostscape-sulphur.details = Cheese.\nBottom text
+item.hollow-frostscape-sulfur.name = Sulfur
+item.hollow-frostscape-sulfur.description = Used in ore refinement, along with powerful projectile and explosive weaponry. Possible nutrient for biological lifeforms.
+item.hollow-frostscape-sulfur.details = Cheese.\nBottom text
 
 item.hollow-frostscape-ferric-panels.name = Ferric Panels
 item.hollow-frostscape-ferric-panels.description = Used in armor plating and light tech. 
@@ -131,9 +131,9 @@ item.hollow-frostscape-enzymes.name = Enzymes
 item.hollow-frostscape-enzymes.description = Used in synthesising Gel, and more advanced bio-synthesis.
 item.hollow-frostscape-enzymes.details = Various concentrated extracts collected from algal growths, seemingly safe for consumption, and high in nutrition.\n\nThe high concentration of specific organic chemical agents hints towards selective traits, though it seems like nobody's left to benefit from them.
 
-item.hollow-frostscape-hailite.name = Hailite
-item.hollow-frostscape-hailite.description = Common rock salt key to obtaining Sodium and Chlorine, and usable in electrolysis.
-item.hollow-frostscape-hailite.details = NaCHOS
+item.hollow-frostscape-hailite.name = Halite
+item.hollow-frostscape-haliite.description = Common rock salt key to obtaining Sodium and Chlorine, and usable in electrolysis.
+item.hollow-frostscape-haliite.details = You see it's funny cause it's hail + halite- *please I swear it's intentional*
 
 item.hollow-frostscape-ice.name = Ice
 item.hollow-frostscape-ice.description = Frozen water usually obtained as a waste product. Useful as portable water storage/coolent.
