Early implementation of item plugs
Added functionality to the item plug, and fixed an issue in ResourceBankHandler when initializing block modules

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -184,6 +184,7 @@ bar.pumpabletiles = Pumpable tiles found!
 bar.crackedfloors = Cracked floors found!
 bar.nocrackedfloors = No valid floors.
 bar.bank.poweramount = Bank Power: {0}
+bar.bank.itemamount = Bank Items: {0}
 
 bar.bank.starting.import = Starting imports
 bar.bank.starting.export = Starting exports
