Caps for resources/deterministic item plugs

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -183,8 +183,8 @@ stat.shieldDamageMultiplier = Shield Damage Multiplier
 bar.pumpabletiles = Pumpable tiles found!
 bar.crackedfloors = Cracked floors found!
 bar.nocrackedfloors = No valid floors.
-bar.bank.poweramount = Bank Power: {0}
-bar.bank.itemamount = Bank Items: {0}
+bar.bank.poweramount = Bank Power: {0}/{1}
+bar.bank.itemamount = Bank Items: {0}/{1}
 
 bar.bank.starting.import = Starting imports
 bar.bank.starting.export = Starting exports
@@ -194,7 +194,7 @@ bar.bank.stable = Stable: No flow
 bar.bank.full = Bank full!
 bar.bank.empty = Bank empty!
 
-bar.bank.disabled = Power Bank Disabled
+bar.bank.disabled = Corresponding Bank Disabled!
 bar.socketsfound = {0} Socket covered
 bar.nosockets = No sockets of same type!
 bar.plugefficiency = {0}% coverage
@@ -206,7 +206,8 @@ category.scanning.vanilla = Vanilla
 dialog.SCHsettings = Map Controller
 dialog.database-entries = Extras
 dialog.database-entries.info0 = Welcome to the database extension!\nThe buttons at the bottom will change the [accent]contents[] of this dialog.
-#All the esater eggs/refrences to Endless Rusting
+
+#All esater eggs/refrences to Endless Rusting
 dialog.database-entries.info1 = [sky]B L I N D I N G  L I G H T
 dialog.database-entries.info2 = [red]F O R E V E R  T R A P P E D  I N  T H I S  D A M M  D I A L O G . . .
 dialog.database-entries.info3 = [#f5bf79]A C H I E V E  E N L I G H T E N M E N T.
