--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -14,22 +14,30 @@ unit.hollow-frostscape-stalagmite.name = Stalagmite
 unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water at enemy targets. Pressure rises proportionally to speed. Travels between bodies of water with a toggleable engine.
 unit.hollow-frostscape-stalagmite.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
 
-
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
 block.spawn.details = Wtf are you doing scanning spawns.
 
 block.space.description = It's space, what did you expect.
 block.space.details = looking out into the vast expanse makes you seem insignificant in comparison.\nhey, that one looks like a crewmate!
 
-block.air.description = It's space, what did you expect.
+block.air.description = HOW THE ACTUAL HECK DID YOU UNLOCK THIS
 block.air.details = mmm 20% unit engine exhaust\nb r e a t h e s       a   g r   e s  s   i  v e   l y
 
 block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic
+
 
 block.hollow-frostscape-grating.name = Grating
 block.hollow-frostscape-grating.env-category = Complex
 block.hollow-frostscape-plating.name = Plating
 block.hollow-frostscape-plating.env-category = Complex
+block.hollow-frostscape-plating2.name = Plating 2
+block.hollow-frostscape-plating2.env-category = Complex
+block.hollow-frostscape-plating3.name = Plating 3
+block.hollow-frostscape-plating3.env-category = Complex
+block.hollow-frostscape-plating-vent.name = Plating Vent
+block.hollow-frostscape-plating-vent.env-category = Complex
+block.hollow-frostscape-plating-unfinished.name = Plating Unfinished
+block.hollow-frostscape-plating-unfinished.env-category = Complex
 block.hollow-frostscape-plating-cross.name = Plating Cross
 block.hollow-frostscape-plating-cross.env-category = Complex
 block.hollow-frostscape-socket.name = Socket
@@ -46,6 +54,8 @@ block.hollow-frostscape-item-socket.name = Item Socket
 block.hollow-frostscape-item-socket.env-category = Complex
 block.hollow-frostscape-item-socket-large.name = Item Socket large
 block.hollow-frostscape-item-socket-large.env-category = Complex
+block.hollow-frostscape-marker-x.name = Marker: X
+block.hollow-frostscape-marker-x.env-category = Complex
 
 block.hollow-frostscape-thermal-landmine.name = Thermal Mine
 block.hollow-frostscape-thermal-landmine.description = Evades detection, activates when stepped on. Remains on while a unit is nearby.
