--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # The mod's internal name, corresponds to `name` in `mod.json`.
 modName = hollow-frostscape
 # The mod's fetched entity sources package.
-modFetch = main.gen
+modFetch = main.fetched
 # The mod's input entity sources package.
 modGenSrc = main.entities.comp
 # The mod's generated sources package.
