new swarm unit made for fun

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,6 +2,10 @@ unit.hollow-frostscape-cord.name = Cord
 unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds at enemy targets, applying a stacking slowing effect. Releases an angled blast of fragments on destruction.
 unit.hollow-frostscape-cord.details = A simple patrol unit often found supporting its buddies. Whenever facing one, targets often find themselves stuck in a bind.
 
+unit.hollow-frostscape-ghoul.name = Ghoul
+unit.hollow-frostscape-ghoul.description = Sprays bursts of focused shots, explodes and zaps all nearby units on death [red]reguardless of team[] for massive damage.
+unit.hollow-frostscape-ghoul.details = A hefty surpression unit, often used to trigger other Swarmer's effects.
+
 unit.hollow-frostscape-sunspot.name = Sunspot
 unit.hollow-frostscape-sunspot.description = Charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
 unit.hollow-frostscape-sunspot.details = Looks like a spearhead, but its proportions are wack.
@@ -238,7 +242,7 @@ family.hollow-frostscape-hunter.name = Hunter
 family.hollow-frostscape-hunter.description = A family of units designed to hunt down targets, and harass larger threats.
 family.hollow-frostscape-hunter.details = [#dde6f0]Hunters[] are designed for "hunting" or harassing targets.\n\nSpeedier [#dde6f0]Hunters[] make great scouts, though they can't pierce behind front lines without help.\n\nSpecialized [#dde6f0]Hunters[] are found utilizing cloaking mechanics, and can penetrate deep into enemy bases to snipe key targets. Ensure you check heat signatures or build sources of specialized radars to protect against such attacks.
 
-family.hollow-frostscape-swarm.name = Swarm [red](WIP)[]
+family.hollow-frostscape-swarm.name = Swarm [red]
 family.hollow-frostscape-swarm.description = A family of units designed around controlled destruction, and overwhelming numbers.
 family.hollow-frostscape-swarm.details = [#f0725c]Swarmers[] are best used to overwhelm with their unique on-death and health threshold effects. Their construction process often involves nearly or fully killing another [#f0725c]Swarmer[].\n\nWhilst [#ffa465]Assault[] units are great against outposts and [#dde6f0]Hunters[] are best against lone targets, [#f0725c]Swarmers[] are best used against groups with no crowd control, regardless of type.\n\n[red]Beware splash damage[].
 
