--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,7 +3,7 @@ unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rou
 unit.hollow-frostscape-cord.details = A simple patrol unit often found supporting its buddies. Whenever facing one, targets often find themselves stuck in a bind.
 
 unit.hollow-frostscape-ghoul.name = Ghoul
-unit.hollow-frostscape-ghoul.description = Sprays bursts of focused shots, explodes and zaps all nearby units on death [red]reguardless of team[] for massive damage.
+unit.hollow-frostscape-ghoul.description = Shoots a spread shots, explodes and zaps all nearby units on death [red]reguardless of team[] for massive damage.
 unit.hollow-frostscape-ghoul.details = A hefty surpression unit, often used to trigger other Swarmer's effects.
 
 unit.hollow-frostscape-sunspot.name = Sunspot
