--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,8 +3,12 @@ unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rou
 unit.hollow-frostscape-cord.details = A simple patrol unit often found supporting its buddies. Whenever facing one, targets often find themselves stuck in a bind.
 
 unit.hollow-frostscape-ghoul.name = Ghoul
-unit.hollow-frostscape-ghoul.description = Shoots a spread shots, explodes and zaps all nearby units on death [red]reguardless of team[] for massive damage.
+unit.hollow-frostscape-ghoul.description = Shoots a of spread shots, explodes and zaps all nearby units on death [red]reguardless of team[] for massive damage.
 unit.hollow-frostscape-ghoul.details = A hefty surpression unit, often used to trigger other Swarmer's effects.
+
+unit.hollow-frostscape-manta.name = Manta
+unit.hollow-frostscape-manta.description = Sprays bursts of piercing shots which slightly home. Very manuverable.
+unit.hollow-frostscape-manta.details = Remodeled hauler capible of combat. Would've lived out a life as a harvester otherwise.
 
 unit.hollow-frostscape-sunspot.name = Sunspot
 unit.hollow-frostscape-sunspot.description = Charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
