New items/environ tiles, manta has ram ability

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,7 +7,7 @@ unit.hollow-frostscape-ghoul.description = Shoots a of spread shots, explodes an
 unit.hollow-frostscape-ghoul.details = A hefty surpression unit, often used to trigger other Swarmer's effects.
 
 unit.hollow-frostscape-manta.name = Manta
-unit.hollow-frostscape-manta.description = Sprays bursts of piercing shots which slightly home. Very manuverable.
+unit.hollow-frostscape-manta.description = Pelts areas with lightly homing shots which pierce a single target. Very manuverable. Does damage when ramming targets.
 unit.hollow-frostscape-manta.details = Remodeled hauler capible of combat. Would've lived out a life as a harvester otherwise.
 
 unit.hollow-frostscape-sunspot.name = Sunspot
@@ -50,6 +50,23 @@ block.hollow-frostscape-plating-cross.name = Plating Cross
 block.hollow-frostscape-plating-cross.env-category = Complex
 block.hollow-frostscape-socket.name = Socket
 block.hollow-frostscape-socket.env-category = Complex
+
+
+block.hollow-frostscape-grating-rusty.name = Rusty Grating
+block.hollow-frostscape-grating-rusty.env-category = Complex
+block.hollow-frostscape-plating-rusty.name = Rusty Plating
+block.hollow-frostscape-plating-rusty.env-category = Complex
+block.hollow-frostscape-plating-rusty2.name = Rusty Plating 2
+block.hollow-frostscape-plating-rusty2.env-category = Complex
+block.hollow-frostscape-plating-rusty3.name = Rusty Plating 3
+block.hollow-frostscape-plating-rusty3.env-category = Complex
+block.hollow-frostscape-plating-vent-rusty.name = Rusty Plating Vent
+block.hollow-frostscape-plating-vent-rusty.env-category = Complex
+block.hollow-frostscape-plating-cross-rusty.name = Rusty Plating Cross
+block.hollow-frostscape-plating-cross-rusty.env-category = Complex
+block.hollow-frostscape-socket-rusty.name = Rusty Socket
+block.hollow-frostscape-socket-rusty.env-category = Complex
+
 block.hollow-frostscape-power-socket.name = Power Socket
 block.hollow-frostscape-power-socket.env-category = Complex
 block.hollow-frostscape-power-socket-large.name = Power Socket Large
@@ -113,6 +130,14 @@ item.hollow-frostscape-stone.name = Stone
 item.hollow-frostscape-stone.description = Bricks of stone rubble commonly harvested from wreckage and ruined barriers, or extracted from the ground.\nThe foundation and concrete in most low-tech buildings.
 item.hollow-frostscape-stone.details = I swear if I have to explain that this isn't actually pure "rock" something is gona blow.\nNo, this is not taconite -.-
 
+item.hollow-frostscape-limestone.name = Limestone
+item.hollow-frostscape-limestone.description = Key source of lime, and usable in decor.
+item.hollow-frostscape-limestone.details = It's calcium but carbon. What did you expect
+
+item.hollow-frostscape-cryolite.name = Cryolite
+item.hollow-frostscape-cryolite.description = Key electrolyte in Aluminium refining, and usable in decor.
+item.hollow-frostscape-cryolite.details = Obscenely complicated to make rock
+
 item.hollow-frostscape-magnetite-shards.name = Magnetite
 item.hollow-frostscape-magnetite-shards.description = Used as a building material and in thermite production.
 item.hollow-frostscape-magnetite-shards.details = The rose chocolate ice cream comes with a cup!\n[darkgray]Shoulda gotten three scoops *grumble*[]
@@ -134,8 +159,12 @@ item.hollow-frostscape-aluminium.description = Used in unit hulls, portable liqu
 item.hollow-frostscape-aluminium.details = Be honest, it looks like generic metal no#infinity without context.
 
 item.hollow-frostscape-sodium.name = Sodium
-item.hollow-frostscape-sodium.description = Used as a potent reduction agent, and oxidises quickly. Consumed as NaOH in electrolytic cells when refining other metals.\n\n[red]Generates immense heat when in contact with water-based substances, and can be triggered to explode.[]
+item.hollow-frostscape-sodium.description = Used as a potent reduction agent, and oxidises quickly. Often used for lye. \n\n[red]Generates immense heat when in contact with water-based substances, and can be triggered to explode.[]
 item.hollow-frostscape-sodium.details = Y'know I was going to do the NaCHOS joke again, but I've really gota ask, who thought using refined sodium was a good idea.
+
+item.hollow-frostscape-calcium.name = Calcium
+item.hollow-frostscape-calcium.description = Organic material, used to refine other metals. A somewhat reducing agent.
+item.hollow-frostscape-calcium.details = I mined your bones
 
 item.hollow-frostscape-boron.name = Boron
 item.hollow-frostscape-boron.description = Used in production of durable platings, and basic semiconductors.
@@ -143,7 +172,11 @@ item.hollow-frostscape-boron.details = Helpful as a glass flux, and algae seems 
 
 item.hollow-frostscape-thermite.name = Thermite
 item.hollow-frostscape-thermite.description = Used extensively in welding and weaponry. Useful as a powerful (but dangerous!) source of fuel.\n\n[red]Thermite fires are hard to start, but don't go out easily.[]
-item.hollow-frostscape-thermite.details = Al + Fe = SPONTANIUM COMBUSTUM-
+item.hollow-frostscape-thermite.details = Al + Fe2O3 = hellfire
+
+item.hollow-frostscape-infernum.name = Infernum
+item.hollow-frostscape-infernum.description = Used in special corrosive and incendiary weaponry. Useful as a potent (but dangerous!) source of fuel.\n\n[red]Infernum fires are hard to start, but don't go out easily.[]
+item.hollow-frostscape-infernum.details = Fe + H = wator bom
 
 item.hollow-frostscape-enzymes.name = Enzymes
 item.hollow-frostscape-enzymes.description = Used in synthesising Gel, and more advanced bio-synthesis.
@@ -153,9 +186,21 @@ item.hollow-frostscape-hailite.name = Halite
 item.hollow-frostscape-haliite.description = Common rock salt key to obtaining Sodium and Chlorine, and usable in electrolysis.
 item.hollow-frostscape-haliite.details = You see it's funny cause it's hail + halite- *please I swear it's intentional*
 
+item.hollow-frostscape-lime.name = Lime
+item.hollow-frostscape-lime.description = Oxidised calcium, useful in steel production, and sodium refinement.
+item.hollow-frostscape-lime.details = lime but not quick
+
+item.hollow-frostscape-soda-lye.name = Soda Lye
+item.hollow-frostscape-soda-lye.description = Key ingredient in electrolytic refinement of metals, caustic when combined with water.
+item.hollow-frostscape-soda-lye.details = Ready to explode, needs something to comfort it
+
 item.hollow-frostscape-ice.name = Ice
 item.hollow-frostscape-ice.description = Frozen water usually obtained as a waste product. Useful as portable water storage/coolent.
 item.hollow-frostscape-ice.details = The obligatory generic item for cold planet mods with dihydride monoxide. Accelerates corrosion and suffocates larger lifeforms with advanced respiratory systems.\n*Water but i c e
+
+item.hollow-frostscape-snow.name = Snow
+item.hollow-frostscape-snow.description = Used as a backup source of water in colder environments. Less compact than ice.
+item.hollow-frostscape-snow.details = Didn't see this one comin, did ya
 
 item.hollow-frostscape-algae-muffin.name = Algae Muffin
 item.hollow-frostscape-algae-muffin.description = Used primarily in gel production, and biological synthesis. Can be revived with water.
