Integrate heat system changes into main repo
I replaced the heat setup by accident but it's late in the morning from last night and I want to sleep

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -236,7 +236,7 @@ settings.frostscape-parallax = Parallax
 settings.frostscape-wind-visual-force = Wind Visual Force
 settings.frostscape-flashing-lights-safety = Flash Safety Mode
 settings.frostscape.flashingwarning = Note that \"Flash Safety Mode\" affects certain floors in the Complex, along with flashy effects found elsewhere. Primarily affects \n-periodic rapid blinking\n-excessive flashiness in effects-\nsources of light.
-
+settings.frostscape-heat-overlay = Heat Overlay
 stat.familyname = Title
 stat.familylink = More info
 stat.envcategory = Environmental Category
