Heat Parts for buildings/hunter unit changes
I should have pushed the heat changes out to the heat branch but I forgot to switch branches while I was working on things

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -11,7 +11,7 @@ unit.hollow-frostscape-manta.description = Pelts areas with lightly homing shots
 unit.hollow-frostscape-manta.details = Remodeled hauler capible of combat. Would've lived out a life as a harvester otherwise.
 
 unit.hollow-frostscape-sunspot.name = Sunspot
-unit.hollow-frostscape-sunspot.description = Charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets. Creates an EMP blast when downed after a short delay.
+unit.hollow-frostscape-sunspot.description = Accelerates, then charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets.
 unit.hollow-frostscape-sunspot.details = Looks like a spearhead, but its proportions are wack.
 
 unit.hollow-frostscape-javelin.name = Javelin
@@ -289,11 +289,11 @@ family.hollow-frostscape-specialist.details = [#c49ff4]Specialists[] are a broad
 
 family.hollow-frostscape-hunter.name = Hunter
 family.hollow-frostscape-hunter.description = A family of units designed to hunt down targets, and harass larger threats.
-family.hollow-frostscape-hunter.details = [#dde6f0]Hunters[] are designed for "hunting" or harassing targets.\n\nSpeedier [#dde6f0]Hunters[] make great scouts, though they can't pierce behind front lines without help.\n\nSpecialized [#dde6f0]Hunters[] are found utilizing cloaking mechanics, and can penetrate deep into enemy bases to snipe key targets. Ensure you check heat signatures or build sources of specialized radars to protect against such attacks.
+family.hollow-frostscape-hunter.details = [#cae4ec]Hunters[] are designed for "hunting" or harassing targets.\n\nSpeedier [#cae4ec]Hunters[] make great scouts, though they can't pierce behind front lines without help.\n\nSpecialized [#cae4ec]Hunters[] are found utilizing cloaking mechanics, and can penetrate deep into enemy bases to snipe key targets. Ensure you check heat signatures or build sources of specialized radars to protect against such attacks.
 
 family.hollow-frostscape-swarm.name = Swarm [red]
 family.hollow-frostscape-swarm.description = A family of units designed around controlled destruction, and overwhelming numbers.
-family.hollow-frostscape-swarm.details = [#f0725c]Swarmers[] are best used to overwhelm with their unique on-death and health threshold effects. Their construction process often involves nearly or fully killing another [#f0725c]Swarmer[].\n\nWhilst [#ffa465]Assault[] units are great against outposts and [#dde6f0]Hunters[] are best against lone targets, [#f0725c]Swarmers[] are best used against groups with no crowd control, regardless of type.\n\n[red]Beware splash damage[].
+family.hollow-frostscape-swarm.details = [#f0725c]Swarmers[] are best used to overwhelm with their unique on-death and health threshold effects. Their construction process often involves nearly or fully killing another [#f0725c]Swarmer[].\n\nWhilst [#ffa465]Assault[] units are great against outposts and [#cae4ec]Hunters[] are best against lone targets, [#f0725c]Swarmers[] are best used against groups with no crowd control, regardless of type.\n\n[red]Beware splash damage[].
 
 family.hollow-frostscape-gelid.name = Gelid [red](WIP)[]
 family.hollow-frostscape-gelid.description = A family of units designed around temperature resistance, and self-preservation.
