--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -8,7 +8,11 @@ unit.hollow-frostscape-ghoul.details = A hefty surpression unit, often used to t
 
 unit.hollow-frostscape-manta.name = Manta
 unit.hollow-frostscape-manta.description = Pelts areas with lightly homing shots which pierce a single target. Very manuverable. Does damage when ramming targets.
-unit.hollow-frostscape-manta.details = Remodeled hauler capible of combat. Would've lived out a life as a harvester otherwise.
+unit.hollow-frostscape-manta.details = Remodeled hauler capible of combat. Would've lived out a life as a drill otherwise.
+
+unit.hollow-frostscape-andon.name = Andon
+unit.hollow-frostscape-andon.description = Shells targets, and launches interceptor missiles at incoming projectiles
+unit.hollow-frostscape-andon.details = Doesn't like to rush targets, prefers staying still at a distance. Beware of the interceptor's ability to drain ammo.
 
 unit.hollow-frostscape-sunspot.name = Sunspot
 unit.hollow-frostscape-sunspot.description = Accelerates, then charges at enemy targets with an adjustable engine. Gains armor when moving quickly while boosting, and damages rammed targets.
