Trying out new pallet, pelter + flyfish

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -94,21 +94,25 @@ block.hollow-frostscape-stone-wall.name = Stone Barrier
 block.hollow-frostscape-stone-wall.description = Protects structures from enemy projectiles. Crumbles under stress, bolstering defense.
 block.hollow-frostscape-stone-wall.dedtails = Shoddy construction, but it works.
 
+block.hollow-frostscape-pelter.name = Pelter
+block.hollow-frostscape-pelter.description = Fires out bursts of miscellaneous rocks/solid water. Requires carbon dioxide.
+block.hollow-frostscape-pelter.details = Sisyphus's younger cousin 
+
+block.hollow-frostscape-rivulet.name = Rivulet
+block.hollow-frostscape-rivulet.description = Spurts out a concentrated stream of water, which bounces between hit targets.
+block.hollow-frostscape-rivulet.details = Wet cat from rainy world. One of the first of its kind.
+
 block.hollow-frostscape-pyroclast.name = Pyroclast
 block.hollow-frostscape-pyroclast.description = Launches fragmentary, bouncing shells filled with napalm. Requires oil.
 block.hollow-frostscape-pyroclast.details = Old designed called for something attached to the back.
-
-block.hollow-frostscape-plume.name = Plume
-block.hollow-frostscape-plume.description = Fries targets with bouncing arcs of electricity.
-block.hollow-frostscape-plume.details = Looks like a snake head when firing. Could just be me.
 
 block.hollow-frostscape-cryonis.name = Cryonis
 block.hollow-frostscape-cryonis.description = Launches a huge fragmenting ice crystal with high damage.
 block.hollow-frostscape-cryonis.details = Using tech you wish you had for instant ice
 
-block.hollow-frostscape-rivulet.name = Rivulet
-block.hollow-frostscape-rivulet.description = Spurts out a concentrated stream of water, which bounces between hit targets.
-block.hollow-frostscape-rivulet.details = Wet cat from rainy world. One of the first of its kind.
+block.hollow-frostscape-plume.name = Plume
+block.hollow-frostscape-plume.description = Fries targets with bouncing arcs of electricity.
+block.hollow-frostscape-plume.details = Looks like a snake head when firing. Could just be me.
 
 block.hollow-frostscape-power-plug.name = Power Plug
 block.hollow-frostscape-power-plug.description = Exchanges a variable amount of power with a sector's power bank.
